# TRCLab-ICH

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  config.env  docker-compose.yml  license.txt  requirements.txt  setup.cfg  tox.ini
dataset/: downloader.py
resources/: ICH_Dataset.py
src/trclab_ich/: __init__.py  trclab_ich.py
tests/: test_dataset.py  test_trclab_ich.py
trclab_ich/utils/: TLogger.py  Tzip.py  __init__.py
