[metadata]
name = TRCLab-ICH
version = 1.0.0
license = MIT
author = TRCLab
author_email = 4a7g0029@stust.edu.tw
description = This package is for TRCLab ICH project
long_description = file: README.md
url = https://github.com/TRCLab-STUST/TRCLab-ICH
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
include_package_data = True
;install_requires =
;    numpy

[options.packages.find]
where=src

;[options.extras_require]
;test =
;    pytest
;    coverage

;[options.package_data]
;sample =
;    example_data.csv
